--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section class="animate__animated animate__fadeInUp mt-5">
         <div class="container">
-            <div class="row ">
+            <div class="row text-center">
                 <div class="col-12 col-md-6 d-flex justify-content-center">
                     <img src="img/mascotas.png" alt="foto" class="img-fluid w-100">
                 </div>
@@ -136,18 +136,16 @@
           </div>
     </section>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, velit non. Exercitationem architecto, vel at consectetur similique natus praesentium porro ipsa nesciunt autem, labore, dolores blanditiis incidunt earum iusto optio.
-    Natus, debitis quae laudantium accusamus reiciendis expedita? A velit autem, excepturi doloribus qui delectus iure nobis doloremque expedita voluptate veritatis modi tempora earum quo eius, sit nesciunt cupiditate assumenda dolore?
-    Quod aliquid eaque vel doloribus dolore odit dignissimos laboriosam, facilis quae, facere debitis rerum illo consequuntur necessitatibus aut id ipsa sunt. Quis nihil nam et facilis temporibus inventore earum nobis!
-    Iste, ratione? Atque tempora distinctio doloremque ducimus deleniti velit suscipit possimus, dolorum consequuntur illo, accusantium tenetur facere aut labore omnis ab voluptatem recusandae saepe eos cum! Laboriosam error iusto id.
-    Fugit culpa qui nihil libero velit est temporibus deserunt, dolorem nisi commodi ad iusto maiores aliquam sit, quos, excepturi perspiciatis ipsam! Voluptas deserunt fuga laudantium fugiat, aut harum distinctio maxime!
-    Voluptatem nisi in sed, deserunt non dolores repellendus tempore eaque rem quia delectus, ipsam iste minima molestias provident magni suscipit cumque doloremque sint voluptas nobis nesciunt. Distinctio officia illo nobis.
-    Provident minima nesciunt delectus tenetur vero minus et, dignissimos ex cum consequatur corrupti quis accusamus optio officiis quod magnam iste ea veniam molestias nisi, incidunt animi quasi sed? Eius, amet!
-    Soluta eaque tempore molestiae iusto perspiciatis odit quae eveniet nam velit magni, provident ratione qui dolores magnam neque eius ullam modi voluptatem nihil! Voluptates minus, delectus exercitationem deleniti beatae accusantium.
-    Distinctio quaerat officia, libero ipsam labore mollitia rem quas magnam nobis ratione dignissimos nostrum culpa aperiam odit consequuntur aut, facilis quam, quia repellendus! Optio sit odio quaerat asperiores at rem.
-    Sed ex quod reprehenderit? Id, cupiditate, atque molestiae eligendi esse harum facere sunt nobis dicta similique tempora enim odit! Consequatur pariatur itaque unde molestias tenetur ex. Possimus laborum perspiciatis necessitatibus.</p>
+    <section>
+      <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-md-4 g-4 d-flex justify-content-center" id="fila">
+
+        </div>
+      </div>
+    </section>
     
     <script src="https://kit.fontawesome.com/afad50195a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="servicio.js"></script>
 </body>
 </html>
