--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
               <h5 class="offcanvas-title" id="offcanvasExampleLabel">Registro</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <form action="" method="POST" class="mt-4">
+            <form class="mt-4 p-2">
                 <div class="mb-3">
                     <label class="form-label">Producto:</label>
-                    <input type="text" class="form-control" name="producto">
+                    <input type="text" class="form-control" name="producto" id="producto">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Fotografía:</label>
-                    <input type="text" class="form-control" name="foto">
+                    <input type="text" class="form-control" name="foto" id="foto">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Precio unidad:</label>
-                    <input type="number" class="form-control" name="precio">
+                    <input type="number" class="form-control" name="precio" id="precio">
                 </div>
                 <div class="mb-3">
                     <div class="form-floating">
-                        <textarea class="form-control" placeholder="Descripcion" name="descripcion" style="height: 100px"></textarea>
+                        <textarea class="form-control" placeholder="Descripcion" name="descripcion" id="descripcion" style="height: 100px"></textarea>
                         <label for="floatingTextarea">Descripción</label>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Tipo de animal:</label>
-                    <select class="form-select" name="tipo">
+                    <select class="form-select" name="tipo" id="tipo">
                         <option value="1" selected>Perro</option>
                         <option value="2">Gato</option>
                         <option value="3">Ave</option>
@@ -131,7 +131,7 @@
                     </select>
                 </div>
                 
-                <button type="submit" class="btn btn-primary w-100">Guardar</button>
+                <button type="button" class="btn btn-primary w-100" id="boton">Guardar</button>
             </form>
           </div>
     </section>
@@ -146,6 +146,6 @@
     
     <script src="https://kit.fontawesome.com/afad50195a.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    <script src="servicio.js"></script>
+    <script src="servicio4.js"></script>
 </body>
 </html>
